<resources>
    <string name="app_name">Speed Read</string>
    <string name="button">Button</string>
    <string name="back">Back</string>
    <string name="textPreView">TextView</string>
    <string name="textview">TextView</string>
    <string name="start">Start</string>
    <string name="open_file">Open File</string>
    <string name="_500_ms">500 ms</string>
    <string name="file_path">File Path</string>
    <string name="restart">Restart</string>
</resources>
